<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="35dp"
        android:text="@string/elegir_marca"
        android:textColor="#33691E"
        app:layout_constraintBottom_toTopOf="@+id/spnmarca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/elegir_talla"
        android:textColor="#33691E"
        app:layout_constraintBottom_toTopOf="@+id/spntalla"
        app:layout_constraintStart_toStartOf="@+id/spnmarca"
        app:layout_constraintTop_toBottomOf="@+id/spnmarca" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="36dp"
        android:text="@string/numero_de_pares_vendidos"
        android:textColor="#33691E"
        app:layout_constraintBottom_toTopOf="@+id/txtnumeropares"
        app:layout_constraintStart_toStartOf="@+id/spntalla"
        app:layout_constraintTop_toBottomOf="@+id/spntalla" />

    <Spinner
        android:id="@+id/spnmarca"
        android:layout_width="316dp"
        android:layout_height="59dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="27dp"
        android:background="#F44336"
        android:entries="@array/marca"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spntalla"
        android:layout_width="331dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="215dp"
        android:background="#F44336"
        android:entries="@array/talla"
        app:layout_constraintBottom_toTopOf="@+id/txtresultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnumeropares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/inserte_numero_de_pares"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#33691E"
        app:layout_constraintBottom_toTopOf="@+id/btncalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btncalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#373333"
        android:onClick="calcular"
        android:text="@string/calcular"
        app:iconTint="#254E4A4A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnumeropares" />

    <TextView
        android:id="@+id/txtresultado"
        android:layout_width="340dp"
        android:layout_height="158dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="24dp"
        android:text="@string/detalles_de_la_venta"
        android:textColor="#E8EEEF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spntalla" />

</androidx.constraintlayout.widget.ConstraintLayout>